--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-<p>Account created. Here's your stupid email address:</p>
+<p>Welcome. Here's your stupid email address:</p>
 <p><%= @user.email %></p>
