Fix album views.

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -2,5 +2,9 @@
 
 <a href="<%= bands_url %>">Back to All Bands</a>
 <br>
+<br>
+
+<a href="<%= new_band_album_url(@band) %>">Create a New Album for <%=@band.name%></a>
 
 <p><strong>Albums and trackslists:</strong></p>
+<br>
